# voiceai-india

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  sip_config.py
agent/templates/: __init__.py  clinic.py  ecommerce.py  general.py  real_estate.py  restaurant.py
backend/: database.py  main.py  voiceai.db
compliance/: __init__.py  trai.py
dashboard/: package-lock.json
dashboard/app/: page.tsx
