[project]
name = "voiceai-india"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.5.1",
    "livekit-plugins-deepgram>=1.5.1",
    "livekit-plugins-openai>=1.5.1",
    "livekit-plugins-silero>=1.5.1",
    "livekit-plugins-turn-detector>=1.5.1",
    "python-dotenv>=1.2.2",
]
